force-app/main/default/objects/Risk_Rating_Evidence__c/Risk_Rating_Evidence__c.object-meta.xml
<CustomObject>
    <customHelpPage>HelpRiskAssessment</customHelpPage>
    <label>Risk Assessment</label>
    <nameField>
        <displayFormat>RR-{000000}</displayFormat>
        <label>Risk Assessment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risk Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>