force-app/main/default/objects/Risk_Rating_Evidence__c/fields/Audit_Log__c.field-meta.xml
<CustomField>
    <fullName>Audit_Log__c</fullName>
    <label>Audit Log</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>