force-app/main/default/objects/Risk_Rating_Evidence__c/fields/File_Attached__c.field-meta.xml
<CustomField>
    <fullName>File_Attached__c</fullName>
    <formula>Attachment_Count__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attachment</label>
    <type>Checkbox</type>
</CustomField>