force-app/main/default/objects/Risk_Rating_Evidence__c/fields/Registration__c.field-meta.xml
<CustomField>
    <fullName>Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registration</label>
    <referenceTo>Registration__c</referenceTo>
    <relationshipName>Risk_Rating_Evidence</relationshipName>
    <type>Lookup</type>
</CustomField>