force-app/main/default/objects/Risk_Rating_Evidence__c/fields/Registration_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Registration_Snapshot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registration Snapshot</label>
    <referenceTo>Registration_Snapshot__c</referenceTo>
    <relationshipName>Risk_Rating_Evidence</relationshipName>
    <type>Lookup</type>
</CustomField>