force-app/main/default/objects/Risk_Rating_Evidence__c/fields/Risk_Factor__c.field-meta.xml
<CustomField>
    <fullName>Risk_Factor__c</fullName>
    <label>Risk Factor</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fraud</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>PEP Match</fullName>
            </value>
            <value>
                <fullName>Sanction List</fullName>
            </value>
            <value>
                <fullName>Suspicion</fullName>
            </value>
            <value>
                <fullName>Transaction Monitoring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>